--- a/Integ/templates/user.html
+++ b/Integ/templates/user.html
@@ -8,11 +8,7 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <script src="index.js"></script>    
-    <h1>Welcome to HOME-EYECARE</h1>
-    <form action = "user">
-      Enter your Name <input type = "text" name = "username"><br>
-      <input type = "submit">
-  </form>
+    <script src="index.js"></script>   
+    <h1>Welcome, {{name}}</h1>
   </body>
 </html>
