--- a/Integ/templates/hd.html
+++ b/Integ/templates/hd.html
@@ -20,6 +20,7 @@
         <p class="sentence" style="font-size: 276px;text-align: center;">T O Z</p>
         <p class="sentence" style="font-size: 252px;text-align: center;">E L D P</p>
         <p class="sentence" style="font-size: 229px;text-align: center;">F D C Z E</p>
+        <p class="sentence" style="font-size: 229px;text-align: center;">F N P W G E</p>
         <p class="sentence" style="font-size: 184px;text-align: center;">F C Z D E P</p>
         <p class="sentence" style="font-size: 161px;text-align: center;">O D P Z E F L</p>
         <p class="sentence" style="font-size: 138px;text-align: center;">C P D T E F O F</p>
