--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -28,12 +28,12 @@
         <p class="sentence" style="font-size: 281px; text-align: center; margin: 10px 0; line-height: 1;">F N P W G E</p>
         <p class="sentence" style="font-size: 250px; text-align: center; margin: 10px 0; line-height: 1;">F C Z D E P</p>
         <p class="sentence" style="font-size: 218px; text-align: center; margin: 10px 0; line-height: 1;">O D P Z E F L</p>
-        <p class="sentence" style="font-size: 187px; text-align: center; margin: 10px 0; line-height: 1;">C P D T E F O F</p>
+        <p class="sentence" style="font-size: 187px; text-align: center; margin: 10px 0; line-height: 1;">C P D T E F C F</p>
         <p class="sentence" style="font-size: 156px; text-align: center; margin: 10px 0; line-height: 1;">Z F T L E D O P</p>
-        <p class="sentence" style="font-size: 125px; text-align: center; margin: 10px 0; line-height: 1;">F D P L T C D O</p>
-        <p class="sentence" style="font-size: 94px; text-align: center; margin: 10px 0; line-height: 1;">F P L D T C D O</p>
+        <p class="sentence" style="font-size: 125px; text-align: center; margin: 10px 0; line-height: 1;">F D O L Z C W E</p>
+        <p class="sentence" style="font-size: 94px; text-align: center; margin: 10px 0; line-height: 1;">F P L D Q C E F</p>
         <p class="sentence" style="font-size: 62px; text-align: center; margin: 10px 0; line-height: 1;">F D C Z E</p>
-        <p class="sentence" style="font-size: 39px; text-align: center; margin: 10px 0; line-height: 1;">F D C Z E</p>
+        <p class="sentence" style="font-size: 39px; text-align: center; margin: 10px 0; line-height: 1;">E D O W F</p>
     </div>
 
   {% csrf_token %}
