--- a/Integ/templates/hd.html
+++ b/Integ/templates/hd.html
@@ -26,13 +26,8 @@
         <p class="sentence" style="font-size: 116px;text-align: center;">Z F T L E D O P</p>
         <p class="sentence" style="font-size: 92px;text-align: center;">F D P L T C D O</p>
         <p class="sentence" style="font-size: 69px;text-align: center;">F P L D T C D O</p>
-        <p class="sentence" style="font-size: 46px;text-align: center;">F D C Z E</p>
-        <p class="sentence" style="font-size: 29px;text-align: center;">F D C Z E</p>
-
-
-
-
-
+        <p class="sentence" style="font-size: 46px;text-align: center;">F D C Z E X Z R U </p>
+        <p class="sentence" style="font-size: 29px;text-align: center;">F D C Z E B L P C K</p>
 
 
     </div>
