--- a/Integ/templates/index.html
+++ b/Integ/templates/index.html
@@ -94,7 +94,7 @@
         <div class="nav">
             <a href="#">About Home-EyeCare</a>
             <a href="#">Support</a>
-            <a href="http://127.0.0.1:5500/Integ/templates/user.html">My Account</a>
+            <a href="#">My Account</a>
         </div>
     </div>
     <h1>Select Your Screen Resolution</h1>
