--- a/Integ/templates/index.html
+++ b/Integ/templates/index.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<<<<<<< HEAD
     <h1>Welcome to HOME-EYECARE</h1>
     
     <form method="post">
@@ -23,4 +22,4 @@
     </form>
 
     <script src="index.js"></script>  
-=======
+</body>
