--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -12,13 +12,6 @@
 
     <h1>2K PAGE</h1>
 
-    <form action="user">
-        Enter the line number clearly read <input type="number" name="line_num">
-        <input type="Submit">
-    </form>
-
-    <h1 style="margin-bottom: 8px;">Eye Test - Select the Line You Can Read</h1>
-
     <div>
         <p class="sentence" style="font-size: 437px; text-align: center; margin: 10px 0; line-height: 1;">E</p>
         <p class="sentence" style="font-size: 406px; text-align: center; margin: 10px 0; line-height: 1;">F P</p>
@@ -35,9 +28,9 @@
         <p class="sentence" style="font-size: 62px; text-align: center; margin: 10px 0; line-height: 1;">F D C Z E</p>
         <p class="sentence" style="font-size: 39px; text-align: center; margin: 10px 0; line-height: 1;">E D O W F</p>
     </div>
-
+<form method = "post" action = "{% url 'result' %}">
   {% csrf_token %}
-  <input type="hidden" name="resolution" value="{% if 'hd' in request.path %}hd{% elif '2k' in request.path %}2k{% else %}4k{% endif %}">
+  <input type="hidden" name="resolution" value="{{ resolution }}">
 
   <label for="line_number">Enter the line number you can read:</label>
   <input type="number" name="line_number" required>
