Resized the html files

--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -13,20 +13,20 @@
     <h1>2K PAGE</h1>
 
     <div>
-        <p class="sentence" style="font-size: 437px; text-align: center; margin: 10px 0; line-height: 1;">E</p>
-        <p class="sentence" style="font-size: 406px; text-align: center; margin: 10px 0; line-height: 1;">F P</p>
-        <p class="sentence" style="font-size: 375px; text-align: center; margin: 10px 0; line-height: 1;">T O Z</p>
-        <p class="sentence" style="font-size: 344px; text-align: center; margin: 10px 0; line-height: 1;">E L D P</p>
-        <p class="sentence" style="font-size: 312px; text-align: center; margin: 10px 0; line-height: 1;">F D C Z E</p>
-        <p class="sentence" style="font-size: 281px; text-align: center; margin: 10px 0; line-height: 1;">F N P W G E</p>
-        <p class="sentence" style="font-size: 250px; text-align: center; margin: 10px 0; line-height: 1;">F C Z D E P</p>
-        <p class="sentence" style="font-size: 218px; text-align: center; margin: 10px 0; line-height: 1;">O D P Z E F L</p>
-        <p class="sentence" style="font-size: 187px; text-align: center; margin: 10px 0; line-height: 1;">C P D T E F C F</p>
-        <p class="sentence" style="font-size: 156px; text-align: center; margin: 10px 0; line-height: 1;">Z F T L E D O P</p>
-        <p class="sentence" style="font-size: 125px; text-align: center; margin: 10px 0; line-height: 1;">F D O L Z C W E</p>
-        <p class="sentence" style="font-size: 94px; text-align: center; margin: 10px 0; line-height: 1;">F P L D Q C E F</p>
-        <p class="sentence" style="font-size: 62px; text-align: center; margin: 10px 0; line-height: 1;">F D C Z E</p>
-        <p class="sentence" style="font-size: 39px; text-align: center; margin: 10px 0; line-height: 1;">E D O W F</p>
+        <p class="sentence" style="font-size: 437px; text-align: center; ">E</p>
+        <p class="sentence" style="font-size: 406px; text-align: center; ">F P</p>
+        <p class="sentence" style="font-size: 375px; text-align: center; ">T O Z</p>
+        <p class="sentence" style="font-size: 344px; text-align: center; ">E L D P</p>
+        <p class="sentence" style="font-size: 312px; text-align: center; ">F D C Z E</p>
+        <p class="sentence" style="font-size: 281px; text-align: center; ">F N P W G E</p>
+        <p class="sentence" style="font-size: 250px; text-align: center; ">F C Z D E P</p>
+        <p class="sentence" style="font-size: 218px; text-align: center; ">O D P Z E F L</p>
+        <p class="sentence" style="font-size: 187px; text-align: center; ">C P D T E F C F</p>
+        <p class="sentence" style="font-size: 156px; text-align: center; ">Z F T L E D O P</p>
+        <p class="sentence" style="font-size: 125px; text-align: center; ">F D O L Z C W E</p>
+        <p class="sentence" style="font-size: 94px; text-align: center; ">F P L D Q C E F</p>
+        <p class="sentence" style="font-size: 62px; text-align: center; ">F D C Z E X T U V</p>
+        <p class="sentence" style="font-size: 39px; text-align: center; ">E D O W F Z R E D M</p>
     </div>
 <form method = "post" action = "{% url 'result' %}">
   {% csrf_token %}
