--- a/Integ/templates/4K.html
+++ b/Integ/templates/4K.html
@@ -13,20 +13,20 @@
     <h1>4K PAGE</h1>
 
     <div>
-        <p class="sentence" style="font-size: 642px; text-align: center; margin: 25px 0; line-height: 1.2;">E</p>
-        <p class="sentence" style="font-size: 598px; text-align: center; margin: 25px 0; line-height: 1.2;">F P</p>
-        <p class="sentence" style="font-size: 553px; text-align: center; margin: 25px 0; line-height: 1.2;">T O Z</p>
-        <p class="sentence" style="font-size: 509px; text-align: center; margin: 25px 0; line-height: 1.2;">E L P</p>
-        <p class="sentence" style="font-size: 464px; text-align: center; margin: 25px 0; line-height: 1.2;">F D E</p>
-        <p class="sentence" style="font-size: 420px; text-align: center; margin: 25px 0; line-height: 1.2;">F P G E</p>
-        <p class="sentence" style="font-size: 375px; text-align: center; margin: 25px 0; line-height: 1.2;">F Z D E</p>
-        <p class="sentence" style="font-size: 331px; text-align: center; margin: 25px 0; line-height: 1.2;">Z D O E F</p>
-        <p class="sentence" style="font-size: 286px; text-align: center; margin: 25px 0; line-height: 1.2;">C P D T E F</p>
-        <p class="sentence" style="font-size: 242px; text-align: center; margin: 25px 0; line-height: 1.2;">Z F T L D O E</p>
-        <p class="sentence" style="font-size: 197px; text-align: center; margin: 25px 0; line-height: 1.2;">F D P L T C D E</p>
-        <p class="sentence" style="font-size: 148px; text-align: center; margin: 25px 0; line-height: 1.2;">F P L D T C D G</p>
-        <p class="sentence" style="font-size: 98px; text-align: center; margin: 25px 0; line-height: 1.2;">F Q C Z E</p>
-        <p class="sentence" style="font-size: 62px; text-align: center; margin: 25px 0; line-height: 1.2;">E D O W F</p>
+        <p class="sentence" style="font-size: 642px; text-align: center; ">E</p>
+        <p class="sentence" style="font-size: 598px; text-align: center; ">F P</p>
+        <p class="sentence" style="font-size: 553px; text-align: center; ">T O Z</p>
+        <p class="sentence" style="font-size: 509px; text-align: center; ">E L P</p>
+        <p class="sentence" style="font-size: 464px; text-align: center; ">F D E</p>
+        <p class="sentence" style="font-size: 420px; text-align: center; ">F P G E</p>
+        <p class="sentence" style="font-size: 375px; text-align: center; ">F Z D E</p>
+        <p class="sentence" style="font-size: 331px; text-align: center; ">Z D O E F</p>
+        <p class="sentence" style="font-size: 286px; text-align: center; ">C P D T E F</p>
+        <p class="sentence" style="font-size: 242px; text-align: center; ">Z F T L D O E</p>
+        <p class="sentence" style="font-size: 197px; text-align: center; ">F D P L T C D E</p>
+        <p class="sentence" style="font-size: 148px; text-align: center; ">F P L D T C D G</p>
+        <p class="sentence" style="font-size: 98px; text-align: center; ">F Q C Z E R Y P O</p>
+        <p class="sentence" style="font-size: 62px; text-align: center; ">E D O W F E Q I O P</p>
     </div>
 
     <form method="post"action = "{% url 'result' %}">
