Adding line index

--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -5,29 +5,87 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2K Eye Test</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
     <script src="index.js"></script>    
 
-    <h1>2K PAGE</h1>
 
-    <div>
-        <p class="sentence" style="font-size: 437px; text-align: center; ">E</p>
-        <p class="sentence" style="font-size: 406px; text-align: center; ">F P</p>
-        <p class="sentence" style="font-size: 375px; text-align: center; ">T O Z</p>
-        <p class="sentence" style="font-size: 344px; text-align: center; ">E L D P</p>
-        <p class="sentence" style="font-size: 312px; text-align: center; ">F D C Z E</p>
-        <p class="sentence" style="font-size: 281px; text-align: center; ">F N P W G E</p>
-        <p class="sentence" style="font-size: 250px; text-align: center; ">F C Z D E P</p>
-        <p class="sentence" style="font-size: 218px; text-align: center; ">O D P Z E F L</p>
-        <p class="sentence" style="font-size: 187px; text-align: center; ">C P D T E F C F</p>
-        <p class="sentence" style="font-size: 156px; text-align: center; ">Z F T L E D O P</p>
-        <p class="sentence" style="font-size: 125px; text-align: center; ">F D O L Z C W E</p>
-        <p class="sentence" style="font-size: 94px; text-align: center; ">F P L D Q C E F</p>
-        <p class="sentence" style="font-size: 62px; text-align: center; ">F D C Z E X T U V</p>
-        <p class="sentence" style="font-size: 39px; text-align: center; ">E D O W F Z R E D M</p>
+    <h1>2K PAGE</h1>
+<h1>SCROLL DOWN</h1>
+
+<div style="display: flex; flex-direction: column; align-items: center;">
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">1st</p>
+        <p class="sentence" style="font-size: 437px; text-align: center; flex-grow: 1;">E</p>
     </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">2nd</p>
+        <p class="sentence" style="font-size: 406px; text-align: center; flex-grow: 1;">F P</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">3rd</p>
+        <p class="sentence" style="font-size: 375px; text-align: center; flex-grow: 1;">T O Z</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">4th</p>
+        <p class="sentence" style="font-size: 344px; text-align: center; flex-grow: 1;">E L P</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">5th</p>
+        <p class="sentence" style="font-size: 312px; text-align: center; flex-grow: 1;">F D E</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">6th</p>
+        <p class="sentence" style="font-size: 281px; text-align: center; flex-grow: 1;">F P G E</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">7th</p>
+        <p class="sentence" style="font-size: 250px; text-align: center; flex-grow: 1;">F Z D E</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">8th</p>
+        <p class="sentence" style="font-size: 218px; text-align: center; flex-grow: 1;">Z D O F</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">9th</p>
+        <p class="sentence" style="font-size: 187px; text-align: center; flex-grow: 1;">C P D T E</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">10th</p>
+        <p class="sentence" style="font-size: 156px; text-align: center; flex-grow: 1;">Z F L D O E</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">11th</p>
+        <p class="sentence" style="font-size: 125px; text-align: center; flex-grow: 1;">F D P L T C D E</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">12th</p>
+        <p class="sentence" style="font-size: 94px; text-align: center; flex-grow: 1;">F P L D T C D G</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">13th</p>
+        <p class="sentence" style="font-size: 62px; text-align: center; flex-grow: 1;">F Q C Z E R Y P O</p>
+    </div>
+
+    <div style="display: flex; align-items: center; width: 100%;">
+        <p style="font-size: 20px; text-align: left; width: 80px;">14th</p>
+        <p class="sentence" style="font-size: 39px; text-align: center; flex-grow: 1;">E D O W F E Q I O P</p>
+    </div>
+</div>
+
 <form method = "post" action = "{% url 'result' %}">
   {% csrf_token %}
   <input type="hidden" name="resolution" value="{{ resolution }}">
