--- a/Integ/templates/4K.html
+++ b/Integ/templates/4K.html
@@ -5,28 +5,84 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>4K Eye Test</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styl.css">
 </head>
 <body>
     <script src="index.js"></script>    
 
     <h1>4K PAGE</h1>
+    <h1>SCROLL DOWN</h1>
 
-    <div>
-        <p class="sentence" style="font-size: 642px; text-align: center; ">E</p>
-        <p class="sentence" style="font-size: 598px; text-align: center; ">F P</p>
-        <p class="sentence" style="font-size: 553px; text-align: center; ">T O Z</p>
-        <p class="sentence" style="font-size: 509px; text-align: center; ">E L P</p>
-        <p class="sentence" style="font-size: 464px; text-align: center; ">F D E</p>
-        <p class="sentence" style="font-size: 420px; text-align: center; ">F P G E</p>
-        <p class="sentence" style="font-size: 375px; text-align: center; ">F Z D E</p>
-        <p class="sentence" style="font-size: 331px; text-align: center; ">Z D O E F</p>
-        <p class="sentence" style="font-size: 286px; text-align: center; ">C P D T E F</p>
-        <p class="sentence" style="font-size: 242px; text-align: center; ">Z F T L D O E</p>
-        <p class="sentence" style="font-size: 197px; text-align: center; ">F D P L T C D E</p>
-        <p class="sentence" style="font-size: 148px; text-align: center; ">F P L D T C D G</p>
-        <p class="sentence" style="font-size: 98px; text-align: center; ">F Q C Z E R Y P O</p>
-        <p class="sentence" style="font-size: 62px; text-align: center; ">E D O W F E Q I O P</p>
+    <div style="display: flex; flex-direction: column; align-items: center;">
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">1st</p>
+            <p class="sentence" style="font-size: 642px; text-align: center; flex-grow: 1;">E</p>
+        </div>
+        
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">2nd</p>
+            <p class="sentence" style="font-size: 598px; text-align: center; flex-grow: 1;">F P</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">3rd</p>
+            <p class="sentence" style="font-size: 553px; text-align: center; flex-grow: 1;">T O Z</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">4th</p>
+            <p class="sentence" style="font-size: 509px; text-align: center; flex-grow: 1;">E L P</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">5th</p>
+            <p class="sentence" style="font-size: 464px; text-align: center; flex-grow: 1;">F D E</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">6th</p>
+            <p class="sentence" style="font-size: 420px; text-align: center; flex-grow: 1;">F P G E</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">7th</p>
+            <p class="sentence" style="font-size: 375px; text-align: center; flex-grow: 1;">F Z D E</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">8th</p>
+            <p class="sentence" style="font-size: 331px; text-align: center; flex-grow: 1;">Z D O F</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">9th</p>
+            <p class="sentence" style="font-size: 286px; text-align: center; flex-grow: 1;">C P D T E</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">10th</p>
+            <p class="sentence" style="font-size: 242px; text-align: center; flex-grow: 1;">Z F L D O E</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">11th</p>
+            <p class="sentence" style="font-size: 197px; text-align: center; flex-grow: 1;">F D P L T C D E</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">12th</p>
+            <p class="sentence" style="font-size: 148px; text-align: center; flex-grow: 1;">F P L D T C D G</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">13th</p>
+            <p class="sentence" style="font-size: 98px; text-align: center; flex-grow: 1;">F Q C Z E R Y P O</p>
+        </div>
+    
+        <div style="display: flex; align-items: center; width: 100%;">
+            <p style="font-size: 30px; text-align: left; width: 100px;">14th</p>
+            <p class="sentence" style="font-size: 62px; text-align: center; flex-grow: 1;">E D O W F E Q I O P</p>
+        </div>
     </div>
 
     <form method="post"action = "{% url 'result' %}">
