--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -11,8 +11,12 @@
     <script src="index.js"></script>    
 
 
-    <h1>2K PAGE</h1>
-<h1>SCROLL DOWN</h1>
+    <div class="navbar">
+        <h1>2K PAGE</h1>
+    </div>
+    <div class="scroll-animation">
+        <img src="Page 42.gif" alt="Scroll Down Animation">
+    </div>
 
 <div style="display: flex; flex-direction: column; align-items: center;">
     <div style="display: flex; align-items: center; width: 100%;">
