--- a/Integ/templates/diopter_result.html
+++ b/Integ/templates/diopter_result.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Diopter Test Result</title>
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="sty.css">
   </head>
   <body>
     <h1>Diopter Test Result</h1>
