--- a/Integ/templates/2k.html
+++ b/Integ/templates/2k.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>2K Eye Test</title>
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="{% static 'styl.css' %}">
 </head>
 <body>
     <script src="index.js"></script>    
