--- a/Integ/templates/4K.html
+++ b/Integ/templates/4K.html
@@ -1,3 +1,4 @@
+{%load static%}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -5,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>4K Eye Test</title>
-    <link rel="stylesheet" href="styl.css">
+    <link rel="stylesheet" href="{% static 'styl.css' %}">
 </head>
 <body>
     <script src="index.js"></script>    
@@ -16,7 +17,7 @@
     
   
     <div class="scroll-animation">
-        <img src="Page 42.gif" alt="Scroll Down Animation">
+        <img src="{% static 'Page 42 copy.gif' %}" alt="Scroll Down Animation">
     </div>
     
     
